--- a/Course_Project_Report__Practical_Machine_Learning_Course.html
+++ b/Course_Project_Report__Practical_Machine_Learning_Course.html
@@ -174,7 +174,7 @@ pre code {
 
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
-<p>This is the Course Project Report for the Joan Hopkins University Data Science Specialization course on Practical Machine Leaning held ot the Coursera. The project involves uploading of training and test data sets, data cleaning and creating a prediction model based on machine learning. The steps taken, to produce the model and to make predictions, are described below.</p>
+<p>This is the Course Project Report for the Joan Hopkins University Data Science Specialization course on Practical Machine Leaning held on the Coursera. The project involves uploading of training and test data sets, data cleaning and creating a prediction model based on machine learning. The steps taken, to produce the model and to make predictions, are described below.</p>
 </div>
 <div id="executive-summary" class="section level1">
 <h1>Executive Summary</h1>
